--- a/index.html
+++ b/index.html
@@ -4,10 +4,213 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hot Gadgets</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <title>Hot Gadgets</title>  
 </head>
 <body>
+    <!-- Menue -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex">
+        <div class="container ">
+          <div><a class="navbar-brand" href="#"><img src="/hot-gadgets/logo.png" alt=""></a></div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item fs-4 fw-bolder">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item fs-4 fw-bold">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+              <li class="nav-item fs-4 fw-bolder">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item fs-4 fw-bolder">
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     
+      <!-- Hero section -->
+      <div id="carouselExamplewarning" class="carousel carousel-dark slide container" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active bg-warning" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" class="bg-warning"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"class="bg-warning"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="2000">
+              <div class="row d-flex align-items-center">
+                  <div class="col-6 ">
+                      <h1 py-3>Macbook Pro</h1>
+                      <p py-3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam blanditiis mollitia labore quisquam, aliquam rerum.</p>
+                      <button class="btn btn-dark">Buy Now</button>
+                  </div>
+                  <div class="col-6"><img src="/hot-gadgets/banner-products/slider-1.png" class="d-block w-100" alt="..."></div>
+              </div>
+            
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="row d-flex align-items-center">
+                <div class="col-6 ">
+                    <h1 py-3>Macbook Pro</h1>
+                    <p py-3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam blanditiis mollitia labore quisquam, aliquam rerum.</p>
+                    <button class="btn btn-dark">Buy Now</button>
+                </div>
+                <div class="col-6"><img src="/hot-gadgets/banner-products/slider-3.png" class="d-block w-100" alt="..."></div>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="row d-flex align-items-center">
+                <div class="col-6 ">
+                    <h1 py-3>Macbook Pro</h1>
+                    <p py-3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam blanditiis mollitia labore quisquam, aliquam rerum.</p>
+                    <button class="btn btn-dark">Buy Now</button>
+                </div>
+                <div class="col-6"><img src="/hot-gadgets/banner-products/slider-1.png" class="d-block w-100" alt="..."></div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+            <span class="visually-hidden">Next</span>
+          </button>
+      </div>
+      <!-- Hero section -->
+
+      <!-- Product section-1 -->
+      <div class="container product-1 my-5">
+        <div class="row d-flex justify-content-between my-3">
+          <div class="col-6 fw-bolder"> <h4>SmartPhone</h4></div>
+          <div class="col-6 text-end"><h5 class="text-warning">See All</h5></div>
+        </div>
+        <div class="row pb-5">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow" >
+              <img src="/hot-gadgets/phone/phone-1.png" class="card-img-top">
+              <div class="card-body text-center">
+                <h5 class="card-title">Redmi Note 10</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6 class="fw-bolder py-2">$799</h6>
+                <a href="#" class="btn btn-dark mb-3">Buy Now ➔</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow">
+              <img src="/hot-gadgets/phone/phone-2.png" class="card-img-top">
+              <div class="card-body text-center">
+                <h5 class="card-title">iPhone</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6 class="fw-bolder py-2">$999</h6>
+                <a href="#" class="btn btn-dark mb-3">Buy Now ➔</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow">
+              <img src="/hot-gadgets/phone/phone-3.png" class="card-img-top">
+              <div class="card-body text-center">
+                <h5 class="card-title">Samsung Galaxy Note10</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6 class="fw-bolder py-2">$799</h6>
+                <a href="#" class="btn btn-dark mb-3">Buy Now ➔</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- product section-1 End -->
+
+      <!-- Product section-2 Start -->
+      <div class="container product-1 my-5">
+        <div class="row d-flex justify-content-between my-3">
+          <div class="col-6 fw-bolder"> <h4>Laptop</h4></div>
+          <div class="col-6 text-end"><h5 class="text-warning">See All</h5></div>
+        </div>
+        <div class="row pb-5">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow" >
+              <img src="/hot-gadgets/laptop/product-1.png" class="card-img-top">
+              <div class="card-body text-center">
+                <h5 class="card-title">Asus VivoBook</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6 class="fw-bolder py-2">$1099</h6>
+                <a href="#" class="btn btn-dark mb-3">Buy Now ➔</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow">
+              <img src="/hot-gadgets/laptop/product-2.png" class="card-img-top">
+              <div class="card-body text-center">
+                <h5 class="card-title">Razer Blade 15</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6 class="fw-bolder py-2">$1999</h6>
+                <a href="#" class="btn btn-dark mb-3">Buy Now ➔</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow">
+              <img src="/hot-gadgets/laptop/product-3.png" class="card-img-top">
+              <div class="card-body text-center">
+                <h5 class="card-title">Xiaomi Mi Notebook Pro</h5>
+                <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6 class="fw-bolder py-2">$1799</h6>
+                <a href="#" class="btn btn-dark mb-3">Buy Now ➔</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- product section 2 End -->
+      <!-- catagories section -->
+      <div class="categories container my-5">
+        <div class="row mb-4">
+          <div class="col-lg-12 text-center">
+            <h3 class="fw-bolder ">Categories</h3>
+            <span></span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-2 d-flex align-items-center">
+            <div class="shadow" >
+              <div class="card p-3">
+                <img src="/hot-gadgets/Categories/bag.png" class="card-img-top" alt="...">
+                <h6 class="card-title text-center">Bag</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-2 d-flex flex-column align-items-center">
+            <div class="mb-4 shadow">
+              <div class="card p-3">
+                <img src="/hot-gadgets/Categories/perfume.png" class="card-img-top" alt="...">
+                <h6 class="card-title text-center">Beauty</h6>
+              </div>
+            </div>
+            <div class="mt-2 shadow" >
+              <div class="card p-3">
+                <img src="/hot-gadgets/Categories/shoe.png" class="card-img-top" alt="...">
+                <h6 class="card-title text-center">Shoes</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-8"><img src="/hot-gadgets/Categories/pale-order.png" class="img-fluid" alt=""></div>
+        </div>
+      </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
