--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex">
         <div class="container ">
-          <div><a class="navbar-brand" href="#"><img src="/hot-gadgets/logo.png" alt=""></a></div>
+          <div><a class="navbar-brand" href="#"><img src="/images/logo.png" alt=""></a></div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -51,7 +51,7 @@
                       <p py-3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam blanditiis mollitia labore quisquam, aliquam rerum.</p>
                       <button class="btn btn-dark">Buy Now</button>
                   </div>
-                  <div class="col-6"><img src="/hot-gadgets/banner-products/slider-1.png" class="d-block w-100" alt="..."></div>
+                  <div class="col-6"><img src="/images/slider-1.png" class="d-block w-100" alt="..."></div>
               </div>
             
           </div>
@@ -62,7 +62,7 @@
                     <p py-3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam blanditiis mollitia labore quisquam, aliquam rerum.</p>
                     <button class="btn btn-dark">Buy Now</button>
                 </div>
-                <div class="col-6"><img src="/hot-gadgets/banner-products/slider-3.png" class="d-block w-100" alt="..."></div>
+                <div class="col-6"><img src="/images/slider-2.png" class="d-block w-100" alt="..."></div>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
@@ -72,7 +72,7 @@
                     <p py-3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam blanditiis mollitia labore quisquam, aliquam rerum.</p>
                     <button class="btn btn-dark">Buy Now</button>
                 </div>
-                <div class="col-6"><img src="/hot-gadgets/banner-products/slider-1.png" class="d-block w-100" alt="..."></div>
+                <div class="col-6"><img src="/images/slider-3.png" class="d-block w-100" alt="..."></div>
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="row pb-5">
           <div class="col-12 col-sm-12 col-md-6 col-lg-4">
             <div class="card shadow" >
-              <img src="/hot-gadgets/phone/phone-1.png" class="card-img-top">
+              <img src="/images/phone-1.png" class="card-img-top">
               <div class="card-body text-center">
                 <h5 class="card-title">Redmi Note 10</h5>
                 <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4">
             <div class="card shadow">
-              <img src="/hot-gadgets/phone/phone-2.png" class="card-img-top">
+              <img src="/images/phone-2.png" class="card-img-top">
               <div class="card-body text-center">
                 <h5 class="card-title">iPhone</h5>
                 <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -118,7 +118,7 @@
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4">
             <div class="card shadow">
-              <img src="/hot-gadgets/phone/phone-3.png" class="card-img-top">
+              <img src="/images/phone-3.png" class="card-img-top">
               <div class="card-body text-center">
                 <h5 class="card-title">Samsung Galaxy Note10</h5>
                 <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -140,7 +140,7 @@
         <div class="row pb-5">
           <div class="col-12 col-sm-12 col-md-6 col-lg-4">
             <div class="card shadow" >
-              <img src="/hot-gadgets/laptop/product-1.png" class="card-img-top">
+              <img src="/images/product-1.png" class="card-img-top">
               <div class="card-body text-center">
                 <h5 class="card-title">Asus VivoBook</h5>
                 <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -151,7 +151,7 @@
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4">
             <div class="card shadow">
-              <img src="/hot-gadgets/laptop/product-2.png" class="card-img-top">
+              <img src="/images/product-2.png" class="card-img-top">
               <div class="card-body text-center">
                 <h5 class="card-title">Razer Blade 15</h5>
                 <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -162,7 +162,7 @@
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4">
             <div class="card shadow">
-              <img src="/hot-gadgets/laptop/product-3.png" class="card-img-top">
+              <img src="/images/product-3.png" class="card-img-top">
               <div class="card-body text-center">
                 <h5 class="card-title">Xiaomi Mi Notebook Pro</h5>
                 <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -186,7 +186,7 @@
           <div class="col-2 d-flex align-items-center">
             <div class="shadow" >
               <div class="card p-3">
-                <img src="/hot-gadgets/Categories/bag.png" class="card-img-top" alt="...">
+                <img src="/images/bag.png" class="card-img-top" alt="...">
                 <h6 class="card-title text-center">Bag</h6>
               </div>
             </div>
@@ -194,18 +194,18 @@
           <div class="col-2 d-flex flex-column align-items-center">
             <div class="mb-4 shadow">
               <div class="card p-3">
-                <img src="/hot-gadgets/Categories/perfume.png" class="card-img-top" alt="...">
+                <img src="/images/perfume.png" class="card-img-top" alt="...">
                 <h6 class="card-title text-center">Beauty</h6>
               </div>
             </div>
             <div class="mt-2 shadow" >
               <div class="card p-3">
-                <img src="/hot-gadgets/Categories/shoe.png" class="card-img-top" alt="...">
+                <img src="/images/shoe.png" class="card-img-top" alt="...">
                 <h6 class="card-title text-center">Shoes</h6>
               </div>
             </div>
           </div>
-          <div class="col-8"><img src="/hot-gadgets/Categories/pale-order.png" class="img-fluid" alt=""></div>
+          <div class="col-8"><img src="/images/pale-order.png" class="img-fluid" alt=""></div>
         </div>
       </div>
 
