--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex">
         <div class="container ">
-          <div><a class="navbar-brand" href="#"><img src="./images/logo.png" alt=""></a></div>
+          <div><a class="navbar-brand" href="#"><img src="/images/logo.png" alt=""></a></div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
