--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <li class="nav-item fs-4 fw-bolder">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item fs-4 fw-bold">
+              <li class="nav-item fs-4 fw-bolder">
                 <a class="nav-link" href="#">Product</a>
               </li>
               <li class="nav-item fs-4 fw-bolder">
